2013-04-23  Werner Lemberg  <wl@gnu.org>

	[ftview] Improve waterfall and text mode.

	* src/ftview.c (status): New member `topleft'.
	(Text): Convert string to UTF-8 encoding.  Now the whole string is
	displayed again.
	(Render_Stroke, Render_Slanted, Render_Embolden, Render_All): Set
	`status.topleft' to the first offset which gets really displayed.
	(Render_Text, Render_Waterfall): Set `status.topleft' to the first
	offset which gets really displayed.
	If characters from the `Text' string have been exhausted, start
	again from the beginning.
	(write_header): Always assume UTF-8 encoding for displaying header
	in `text' and `waterfall' modes.

2013-04-23  Werner Lemberg  <wl@gnu.org>

	[ftview] Rename some variables.

	* src/ftview.c (status): s/font_index/font_idx/.
	s/Num/offset/.
	s/Fail/num_fails/.
	s/fw_index/fw_idx/.
	Update all callers.
	(Render_Stroke, Render_Slanted, Render_Embolden, Render_All,
	Render_Text, Render_Waterfall): s/first_index/offset/.
	(event_index_change): s/old_Num/old_offset/.
	(write_header): s/gindex/glyph_idx/.

2013-04-20  Werner Lemberg  <wl@gnu.org>

	[ftdiff] New `x' key to toggle layout modes. (cbox vs. adv. width).

	Using the advance width is the new default.

	* src/ftdiff.c (ColumnStateRec): New member `use_cboxes'.
	(render_state_init): Updated.
	(render_state_draw): Use advance width instead of the maximum x
	value of the cbox if `use_cboxes' is set to 0.
	(event_help): Updated.
	(process_event): Handle `x' key.

2013-04-18  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Implement key `H' to select CFF hinting engine.

	* src/ftdiff.c: Include FT_CFF_DRIVER_H.
	Include FT_MODULE_H, FT_INTERNAL_OBJECTS_H, and
	FT_INTERNAL_DRIVER_H.
	(HINTING_ENGINE_MAX): New macro.
	(ColumnStateRec): New member `hinting_engine'.
	(render_state_init): Updated.
	(render_state_draw): Select hinting engine.
	Display hinting engine if we have CFF font.
	(event_help): Updated.
	(process_event): Handle `H' key.
